--- a/Pick Color/Base.lproj/Main.storyboard
+++ b/Pick Color/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1057" y="337"/>
+            <point key="canvasLocation" x="1262" y="337"/>
         </scene>
         <!--Current Color View Controller-->
         <scene sceneID="2tf-MZ-exn">
@@ -351,7 +351,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c2j-e0-UFQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1824.6376811594205" y="336.68478260869568"/>
+            <point key="canvasLocation" x="2028" y="336"/>
         </scene>
         <!--Save View Controller-->
         <scene sceneID="1XF-RY-pSe">
@@ -437,7 +437,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HsP-GJ-Olz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2596" y="337"/>
+            <point key="canvasLocation" x="2800" y="336"/>
         </scene>
         <!--Reveal View Controller-->
         <scene sceneID="WeL-Sr-sUJ">
@@ -560,6 +560,9 @@
                                                 <constraint firstItem="yM5-UR-osH" firstAttribute="centerY" secondItem="wpl-0X-WM4" secondAttribute="centerY" id="IB1-YQ-VSj"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="aNX-7K-Rdx" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="EOn-Zl-3rE"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="wD9-Lw-G1n" customClass="MKTableViewCell" customModule="Pick_Color" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="260" width="375" height="65"/>
@@ -568,8 +571,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="open source" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idp-Ub-D2U">
-                                                    <rect key="frame" x="24" y="16" width="134" height="33"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="source" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idp-Ub-D2U">
+                                                    <rect key="frame" x="24" y="16" width="71" height="33"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="24"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -580,6 +583,9 @@
                                                 <constraint firstItem="Idp-Ub-D2U" firstAttribute="centerY" secondItem="yr7-vm-WAG" secondAttribute="centerY" id="xzO-6s-xIc"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="xMY-P2-9yd" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="NlY-EU-Rs4"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -592,7 +598,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uhe-XY-ShS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="287" y="-435"/>
+            <point key="canvasLocation" x="286" y="-829"/>
         </scene>
         <!--Navigation View Controller-->
         <scene sceneID="fY7-Zg-kNZ">
@@ -698,7 +704,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zdz-9e-7gS" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1826.4000000000001" y="-435.83208395802103"/>
+            <point key="canvasLocation" x="2031" y="-436"/>
         </scene>
         <!--Navigation View Controller-->
         <scene sceneID="ycI-vg-JIj">
@@ -716,7 +722,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ete-ou-ihW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1057" y="-435"/>
+            <point key="canvasLocation" x="1262" y="-436"/>
         </scene>
         <!--about-->
         <scene sceneID="5zj-bU-Ka9">
@@ -848,7 +854,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="twn-0g-yNe" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1826.0869565217392" y="-1193.4782608695652"/>
+            <point key="canvasLocation" x="2030" y="-1194"/>
         </scene>
         <!--Navigation View Controller-->
         <scene sceneID="WBU-ui-Lgl">
@@ -866,7 +872,147 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HzY-Hb-OcO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1057" y="-1193"/>
+            <point key="canvasLocation" x="1262" y="-1193"/>
+        </scene>
+        <!--open source project-->
+        <scene sceneID="gkP-nB-3NE">
+            <objects>
+                <viewController id="igq-Wg-3At" customClass="SourceViewController" customModule="Pick_Color" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uzB-ar-5FG"/>
+                        <viewControllerLayoutGuide type="bottom" id="0oT-eR-nVn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IXG-Td-Fsz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eBQ-DX-VCy">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" textLabel="uMl-YZ-UU6" style="IBUITableViewCellStyleDefault" id="2lP-wl-ed7">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2lP-wl-ed7" id="tbr-oK-kfy">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uMl-YZ-UU6">
+                                                    <rect key="frame" x="15" y="0.0" width="325" height="60"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="eBQ-DX-VCy" firstAttribute="top" secondItem="IXG-Td-Fsz" secondAttribute="top" id="VwE-UO-tch"/>
+                            <constraint firstItem="eBQ-DX-VCy" firstAttribute="leading" secondItem="IXG-Td-Fsz" secondAttribute="leading" id="bWB-8I-W7H"/>
+                            <constraint firstAttribute="trailing" secondItem="eBQ-DX-VCy" secondAttribute="trailing" id="rRR-kX-ffX"/>
+                            <constraint firstItem="0oT-eR-nVn" firstAttribute="top" secondItem="eBQ-DX-VCy" secondAttribute="bottom" id="zOK-nz-Q0t"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="open source project" id="w71-EM-8QV">
+                        <barButtonItem key="leftBarButtonItem" image="ic_menu" id="pmr-Ik-e27"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="menu" destination="pmr-Ik-e27" id="dAM-TQ-Je5"/>
+                        <outlet property="tableView" destination="eBQ-DX-VCy" id="f4s-72-6YC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MlT-Xq-EfL" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2030" y="-2669"/>
+        </scene>
+        <!--Navigation View Controller-->
+        <scene sceneID="pJi-WT-hs2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xMY-P2-9yd" customClass="NavigationViewController" customModule="Pick_Color" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bZD-zI-4SD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="igq-Wg-3At" kind="relationship" relationship="rootViewController" id="30r-IZ-bQu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O3n-76-9aF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1218" y="-2669"/>
+        </scene>
+        <!--tutorial-->
+        <scene sceneID="lXj-4i-vJ4">
+            <objects>
+                <viewController id="K3m-dy-m0q" customClass="TutorialViewController" customModule="Pick_Color" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sWR-cQ-ZOa"/>
+                        <viewControllerLayoutGuide type="bottom" id="tk2-Fx-6qX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JgY-7D-NlV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I'll do this tomorrow..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="goX-r0-6ZI">
+                                <rect key="frame" x="16" y="72" width="163" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="or the day after tomorrow..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kwF-AE-Nfn">
+                                <rect key="frame" x="16" y="101" width="208" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="or few weeks later..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEm-zo-0eb">
+                                <rect key="frame" x="16" y="130" width="152" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="tutorial" id="pMv-pN-RCW">
+                        <barButtonItem key="leftBarButtonItem" image="ic_menu" id="3eS-8S-dJw"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="menu" destination="3eS-8S-dJw" id="8ey-3W-zD9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R0z-2f-xHo" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2026" y="-1944"/>
+        </scene>
+        <!--Navigation View Controller-->
+        <scene sceneID="Vny-8y-jgI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aNX-7K-Rdx" customClass="NavigationViewController" customModule="Pick_Color" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3vF-ae-8MW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="K3m-dy-m0q" kind="relationship" relationship="rootViewController" id="8Sb-KV-iXA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Be-4t-6fB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1218" y="-1944"/>
         </scene>
     </scenes>
     <resources>
