--- a/Pick Color/Base.lproj/Main.storyboard
+++ b/Pick Color/Base.lproj/Main.storyboard
@@ -123,6 +123,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cc2-zd-Nra" userLabel="PanView">
+                                <rect key="frame" x="16" y="98" width="343" height="491"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URm-wj-rkh">
                                 <rect key="frame" x="94" y="98" width="187.5" height="187.5"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -133,7 +137,40 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" translatesAutoresizingMaskIntoConstraints="NO" id="zjv-SG-TFq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NzY-Th-J7t">
+                                <rect key="frame" x="320.5" y="388.5" width="31" height="30.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="22"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zg1-ld-1It">
+                                <rect key="frame" x="320.5" y="434.5" width="31" height="30.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="22"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQU-gK-XW0">
+                                <rect key="frame" x="320.5" y="480.5" width="31" height="30.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="22"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PMr-2o-XFE">
+                                <rect key="frame" x="320.5" y="526.5" width="31" height="30.5"/>
+                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="22"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DeZ-si-o3A">
+                                <rect key="frame" x="16" y="293.5" width="343" height="18"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DNw-vq-3Ld">
+                                <rect key="frame" x="16" y="72" width="343" height="18"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="zjv-SG-TFq">
                                 <rect key="frame" x="96.5" y="319.5" width="182" height="29"/>
                                 <segments>
                                     <segment title="Swift" width="60"/>
@@ -187,31 +224,6 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NzY-Th-J7t">
-                                <rect key="frame" x="320.5" y="388.5" width="31" height="30.5"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="22"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zg1-ld-1It">
-                                <rect key="frame" x="320.5" y="434.5" width="31" height="30.5"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="22"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQU-gK-XW0">
-                                <rect key="frame" x="320.5" y="480.5" width="31" height="30.5"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="22"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PMr-2o-XFE">
-                                <rect key="frame" x="320.5" y="526.5" width="31" height="30.5"/>
-                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="22"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ocz-bj-y4q">
                                 <rect key="frame" x="60.5" y="388" width="254" height="31"/>
                                 <color key="tintColor" red="0.97647058819999999" green="0.17254901959999999" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
@@ -240,16 +252,8 @@
                                     <action selector="colorChanged:" destination="8EA-kK-m3p" eventType="valueChanged" id="BO5-Cx-60m"/>
                                 </connections>
                             </slider>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DeZ-si-o3A">
-                                <rect key="frame" x="16" y="293.5" width="343" height="18"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YBj-Tr-FBY">
                                 <rect key="frame" x="16" y="355.5" width="343" height="25"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DNw-vq-3Ld">
-                                <rect key="frame" x="16" y="72" width="343" height="18"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r2C-pT-3fA">
@@ -265,6 +269,8 @@
                             <constraint firstItem="ocz-bj-y4q" firstAttribute="width" secondItem="J3L-e8-Y7U" secondAttribute="width" multiplier="2:3" id="3rw-eh-ei1"/>
                             <constraint firstItem="oK3-SX-ykx" firstAttribute="width" secondItem="RAU-ap-BX1" secondAttribute="width" id="5QX-KT-VrW"/>
                             <constraint firstItem="ocz-bj-y4q" firstAttribute="centerX" secondItem="J3L-e8-Y7U" secondAttribute="centerX" id="5ic-Em-GtQ"/>
+                            <constraint firstItem="Cc2-zd-Nra" firstAttribute="trailing" secondItem="J3L-e8-Y7U" secondAttribute="trailingMargin" id="6pe-YD-7Bf"/>
+                            <constraint firstItem="Ztu-b7-9rW" firstAttribute="top" secondItem="Cc2-zd-Nra" secondAttribute="bottom" constant="8" id="7eF-Lb-2Dd"/>
                             <constraint firstItem="DNw-vq-3Ld" firstAttribute="top" secondItem="V2h-2a-aih" secondAttribute="bottom" constant="8" id="8yk-c4-xgr"/>
                             <constraint firstItem="hQU-gK-XW0" firstAttribute="centerY" secondItem="oK3-SX-ykx" secondAttribute="centerY" id="EJx-6O-HBL"/>
                             <constraint firstItem="PMr-2o-XFE" firstAttribute="leading" secondItem="Fk5-QK-G3B" secondAttribute="trailing" constant="8" id="FfB-wx-9ve"/>
@@ -278,11 +284,13 @@
                             <constraint firstItem="tRk-B6-U5S" firstAttribute="leading" secondItem="zul-yt-rie" secondAttribute="leading" id="M41-PU-12v"/>
                             <constraint firstItem="uXu-d0-jfi" firstAttribute="top" secondItem="Jzf-NU-2ev" secondAttribute="bottom" constant="8" id="MjA-nG-mi4"/>
                             <constraint firstItem="zg1-ld-1It" firstAttribute="leading" secondItem="RAU-ap-BX1" secondAttribute="trailing" constant="8" id="MyF-OF-UrZ"/>
+                            <constraint firstItem="Cc2-zd-Nra" firstAttribute="leading" secondItem="J3L-e8-Y7U" secondAttribute="leadingMargin" id="NPU-cE-iia"/>
                             <constraint firstAttribute="trailingMargin" secondItem="DeZ-si-o3A" secondAttribute="trailing" id="NRT-59-8HR"/>
                             <constraint firstItem="Ztu-b7-9rW" firstAttribute="centerX" secondItem="J3L-e8-Y7U" secondAttribute="centerX" id="NYz-zI-VPG"/>
                             <constraint firstAttribute="leadingMargin" secondItem="YBj-Tr-FBY" secondAttribute="leading" id="PdX-Zj-OX3"/>
                             <constraint firstItem="zjv-SG-TFq" firstAttribute="centerX" secondItem="J3L-e8-Y7U" secondAttribute="centerX" id="Pme-71-fYO"/>
                             <constraint firstItem="YBj-Tr-FBY" firstAttribute="top" secondItem="zjv-SG-TFq" secondAttribute="bottom" constant="8" id="TEb-NA-Rso"/>
+                            <constraint firstItem="Cc2-zd-Nra" firstAttribute="top" secondItem="DNw-vq-3Ld" secondAttribute="bottom" constant="8" id="TOh-jM-oJe"/>
                             <constraint firstItem="r2C-pT-3fA" firstAttribute="height" secondItem="YBj-Tr-FBY" secondAttribute="height" id="Tuk-gE-VzY"/>
                             <constraint firstItem="PMr-2o-XFE" firstAttribute="centerY" secondItem="Fk5-QK-G3B" secondAttribute="centerY" id="UEo-Dq-40Y"/>
                             <constraint firstItem="uXu-d0-jfi" firstAttribute="trailing" secondItem="Jzf-NU-2ev" secondAttribute="trailing" id="Uit-FH-1O0"/>
@@ -344,6 +352,7 @@
                         <outlet property="greenColorValueLabel" destination="zg1-ld-1It" id="T75-9i-MOV"/>
                         <outlet property="greenSlider" destination="RAU-ap-BX1" id="qUc-Jd-zHI"/>
                         <outlet property="languageExangeControl" destination="zjv-SG-TFq" id="WHj-w3-KAy"/>
+                        <outlet property="panView" destination="Cc2-zd-Nra" id="XNe-Eb-xNq"/>
                         <outlet property="redColorValueLabel" destination="NzY-Th-J7t" id="r76-IE-QB4"/>
                         <outlet property="redSlider" destination="ocz-bj-y4q" id="mdA-IO-nWl"/>
                         <outlet property="saveBarButton" destination="1Yf-Ml-wSW" id="QoC-Tr-hcs"/>
@@ -351,7 +360,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c2j-e0-UFQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2028" y="336"/>
+            <point key="canvasLocation" x="2028" y="335.98200899550227"/>
         </scene>
         <!--Save View Controller-->
         <scene sceneID="1XF-RY-pSe">
